chore: stop icons being hidden by uBlock

--- a/app/styles/layout/_sidebars.scss
+++ b/app/styles/layout/_sidebars.scss
@@ -24,7 +24,7 @@
 }
 
 .sidebar-footer {
-  .footer-social {
+  .footer-social-icons {
     display: inline-block;
     border-top: 1px solid $divider-color;
     padding-top: 10px;
